sprint 15: corrections after revision1